Replace Optional with Nullable.